Добавлен метод updateEpicDurationAndStatus/updateEpicDuration/prioritize Подправлены методы